--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
     <!-- default and it's depends are the normal automated full ETL. -->
 
-    <target name="default" depends="copyFromNatprod, copyFromNemi, copyFromDataChecks, transformAndLoadData" />
+    <target name="default" depends="copyFromNatprod, copyFromNemi, transformAndLoadData" />
 
     <target name="copyFromNatprod">
         <echo>Copy data from NATPROD</echo>
@@ -17,14 +17,6 @@
         <exec executable="sqlplus" failonerror="true">
             <arg value="nwis_ws_star/${nwis_ws_star_password}@${instance}"/>
             <arg value="@${basedir}/copyFromNemi.sql"/>
-        </exec>
-    </target>
-
-    <target name="copyFromDataChecks">
-        <echo>Copy DataChecks info from DBNOLOG</echo>
-        <exec executable="sqlplus" failonerror="true">
-            <arg value="nwis_ws_star/${nwis_ws_star_password}@${instance}"/>
-            <arg value="@${basedir}/copyFromDataChecks.sql"/>
         </exec>
     </target>
 
