--- a/build.xml
+++ b/build.xml
@@ -2,21 +2,13 @@
 
     <!-- default and it's depends are the normal automated full ETL. -->
 
-    <target name="default" depends="copyFromNatprod, copyFromNemi, transformAndLoadData" />
+    <target name="default" depends="copyFromNatprod, transformAndLoadData" />
 
     <target name="copyFromNatprod">
         <echo>Copy data from NATPROD</echo>
         <exec executable="sqlplus" failonerror="true">
             <arg value="nwis_ws_star/${nwis_ws_star_password}@${instance}"/>
             <arg value="@${basedir}/copyFromNatprod.sql"/>
-        </exec>
-    </target>
-
-    <target name="copyFromNemi">
-        <echo>Copy NEMI info from DBTRANS</echo>
-        <exec executable="sqlplus" failonerror="true">
-            <arg value="nwis_ws_star/${nwis_ws_star_password}@${instance}"/>
-            <arg value="@${basedir}/copyFromNemi.sql"/>
         </exec>
     </target>
 
